# pingrep

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  .yamlfmt  Cargo.toml  Justfile  README.md  dist-workspace.toml  go.mod  go.sum  main.go
.github/: dependabot.yml  renovate.json5
.github/workflows/: linters.yaml  publish-crate.yml  release.yml  tests.yaml  tests.yml  version-bump.yaml  version-bump.yml
internal/cli/: browse.go  fzf.go  helpers.go  login.go  main.go  search.go  show.go  update.go
internal/pinboard/: client.go  collection.go  filter.go
internal/query/: query.go  query_test.go
src/: errors.rs  lib.rs  macros.rs  main.rs  pinboard.rs
src/cli/: filters.rs  mod.rs
src/cli/commands/: fzf.rs  hello.rs  login.rs  mod.rs  open.rs  show.rs  update.rs
src/pinboard/: client.rs  mod.rs
templates/: fzf.txt  show.txt
