[package]
name = "pingrep"
version = "23.12.1"
edition = "2021"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/zoni/pingrep/"
description = "A command-line tool to quickly and easily search through your Pinboard bookmarks locally"

[lib]
name = "pingrep"
path = "src/lib.rs"

[[bin]]
name = "pingrep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = [] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.10", features = ["derive"] }
directories = "5.0.1"
dirs = "5.0.1"
duct = "0.13.6"
keyring = "2.0.5"
open = "5.0.1"
os_pipe = "1.1.4"
paste = "1.0.14"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["serde_derive"] }
serde_json = "1.0.107"
snafu = "0.7.5"
tempfile = "3.10.1"
textwrap = { version = "0.16.0", features = ["terminal_size", "hyphenation"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
	#"aarch64-unknown-linux-gnu", # Not yet supported (2023-12-03)
	"x86_64-unknown-linux-gnu",
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	# "aarch64-pc-windows-msvc",, # Not yet supported (2023-12-03)
	"x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
publish-jobs = ["./publish-crate"]

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} v{{version}}"
tag-message = "Release {{crate_name}} version {{version}} (previous release was {{prev_version}})"
