[package]
name = "pingrep"
version = "25.2.0"
edition = "2021"
license = "BSD-2-Clause-Patent"
repository = "https://github.com/zoni/pingrep/"
description = "A command-line tool to quickly and easily search through your Pinboard bookmarks locally"

[lib]
name = "pingrep"
path = "src/lib.rs"

[[bin]]
name = "pingrep"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
askama = { version = "0.12.1", features = [] }
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
directories = "6.0.0"
dirs = "6.0.0"
duct = "0.13.7"
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
open = "5.0.2"
os_pipe = "1.1.5"
paste = "1.0.14"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
snafu = "0.8.2"
tempfile = "3.10.1"
textwrap = { version = "0.16.1", features = ["terminal_size", "hyphenation"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} v{{version}}"
tag-message = "Release {{crate_name}} version {{version}} (previous release was {{prev_version}})"
